fix garden extra space at bottom. fix popup overflow page x on resize

--- a/components/PopUp.module.scss
+++ b/components/PopUp.module.scss
@@ -2,6 +2,7 @@
 	@include roundedElement();
 	align-items: flex-start !important;
 	position: absolute;
+	display: none;
 	top: 0px;
 	left: 0px;
 	margin-top: -20px;
@@ -15,6 +16,7 @@
 	text-align: left;
 
 	&.show {
+		display: block;
 		opacity: 1;
 	}
 
