--- a/components/views/Garden.module.scss
+++ b/components/views/Garden.module.scss
@@ -47,17 +47,6 @@
 	z-index: 1;
 	width: 100%;
 	min-height: 100%;
-	overflow: visible;
-	/*
-	&.inactive{
-		max-height: 100vh;
-		max-width: 100vw;
-		overflow: hidden;
-		*{
-			pointer-events: none;
-		}
-	}
-	*/
 }
 .diggi {
 	position: fixed;
